Cambiando todo a jpa